Logo width fix on mobile

--- a/nav.css
+++ b/nav.css
@@ -128,7 +128,7 @@
 
 @media screen and (max-width: 980px) {
   .logo {
-    width:90%;
+    width:70%;
   }
 
   #navbar li {
